--- a/OnPod/Node/RearNode/.project
+++ b/OnPod/Node/RearNode/.project
@@ -30,4 +30,36 @@
 		<nature>org.eclipse.cdt.managedbuilder.core.ScannerConfigNature</nature>
 		<nature>io.sloeber.arduinonature</nature>
 	</natures>
+	<linkedResources>
+		<link>
+			<name>core/core</name>
+			<type>2</type>
+			<location>C:/ARM/Arduino/portable/packages/arduino/hardware/samd/1.6.15/cores/arduino</location>
+		</link>
+		<link>
+			<name>core/variant</name>
+			<type>2</type>
+			<location>C:/ARM/Arduino/portable/packages/arduino/hardware/samd/1.6.15/variants/mkr1000</location>
+		</link>
+		<link>
+			<name>libraries/Ethernet</name>
+			<type>2</type>
+			<location>C:/ARM/Arduino/libraries/Ethernet</location>
+		</link>
+		<link>
+			<name>libraries/SPI</name>
+			<type>2</type>
+			<location>C:/ARM/Arduino/portable/packages/arduino/hardware/samd/1.6.15/libraries/SPI</location>
+		</link>
+		<link>
+			<name>libraries/Sodaq_wdt-1.0.1</name>
+			<type>2</type>
+			<location>C:/ARM/Arduino/libraries/Sodaq_wdt-1.0.1</location>
+		</link>
+		<link>
+			<name>libraries/Timer-2.1</name>
+			<type>2</type>
+			<location>C:/ARM/Arduino/libraries/Timer-2.1</location>
+		</link>
+	</linkedResources>
 </projectDescription>
