Revert "Update gitIgnore, add make files"
This reverts commit 6e5d10b431a176e54feb7ea69d41b578c9a37c43.

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,9 @@
 .metadata
 *sloeber.ino.cpp
 *Release/
-*.o
+*Debug/
 *.d
 *.project
 *.cproject
 *.settings
 .DS_Store
-*Debug/src/
-
-OnPod/FlightComputer/Debug/FlightComputer
