Update gitIgnore, add make files
From what I can tell we will need the makefile for our CI tool. So adding it back in so I can test it out

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,12 @@
 .metadata
 *sloeber.ino.cpp
 *Release/
-*Debug/
+*.o
 *.d
 *.project
 *.cproject
 *.settings
 .DS_Store
+*Debug/src/
+
+OnPod/FlightComputer/Debug/FlightComputer
