--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,12 @@
 .metadata
 *sloeber.ino.cpp
 *Release/
-*Debug/
+*.o
 *.d
 *.project
 *.cproject
 *.settings
 .DS_Store
+
+
+OnPod/FlightComputer/Debug/FlightComputer
