--- a/OnPod/FlightComputer/tests/Makefile
+++ b/OnPod/FlightComputer/tests/Makefile
@@ -7,7 +7,7 @@ TESTLIB = catch.hpp
 COMP = g++
 
 #Catch needs c++11   Add include path for the project
-BLDFLAGS = -std=c++11 -I"../include/FlightComputer"
+BLDFLAGS = -std=c++11 -stdlib=libc++ -I"../include/FlightComputer" -Wl
 
 #Link to object files for project. They should be made as the project is compile prior to runing this make file
 ALLSRC = $(shell find ../Debug/src -name '*.o')
