Update travis.yml to install protobuf libraries

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,15 @@
 sudo: required
 before_install:
-
+  - sudo apt-get install autoconf automake libtool curl make g++ unzip
+  - wget "https://github.com/protocolbuffers/protobuf/releases/download/v3.6.1/protobuf-cpp-3.6.1.tar.gz"
+  - tar xvzf protobuf-cpp-3.6.1.tar.gz
+  - cd protobuf-3.6.1
+  - ./configure
+  - make
+  - make check
+  - sudo make install
+  - sudo ldconfig
+  - cd ..
   
 # Enable C++ support
 language: cpp
