--- a/OnPod/FlightComputer/.cproject
+++ b/OnPod/FlightComputer/.cproject
@@ -28,7 +28,7 @@
 								<option id="gnu.cpp.compiler.option.include.paths.75871214" name="Include paths (-I)" superClass="gnu.cpp.compiler.option.include.paths" useByScannerDiscovery="false" valueType="includePath">
 									<listOptionValue builtIn="false" value=".././include"/>
 									<listOptionValue builtIn="false" value="../include/FlightComputer"/>
-									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/FlightComputer/include/ProtoBuffer}&quot;"/>
+									<listOptionValue builtIn="false" value="../include/ProtoBuffer"/>
 								</option>
 								<option id="gnu.cpp.compiler.option.optimization.level.1430509497" name="Optimization Level" superClass="gnu.cpp.compiler.option.optimization.level" useByScannerDiscovery="false" value="gnu.cpp.compiler.optimization.level.none" valueType="enumerated"/>
 								<option id="gnu.cpp.compiler.option.debugging.level.1959056774" name="Debug Level" superClass="gnu.cpp.compiler.option.debugging.level" useByScannerDiscovery="false" value="gnu.cpp.compiler.debugging.level.max" valueType="enumerated"/>
