--- a/.gitignore
+++ b/.gitignore
@@ -16,8 +16,8 @@ pycache/
 *org.eclipse.cdt.core.prefs
 *platformio.ini
 *platformio
-.pio
-.pioenvs
-.piolibdeps
-.clang_complete
-.gcc-flags.json
+*.pio
+*.pioenvs
+*.piolibdeps
+*.clang_complete
+*.gcc-flags.json
