--- a/OnPod/FlightComputer/include/EasyLogger/logging.conf
+++ b/OnPod/FlightComputer/include/EasyLogger/logging.conf
@@ -3,7 +3,7 @@
    FILENAME             =  "/tmp/logs/FlightComputer.log"
    ENABLED              =  true
    TO_FILE              =  true
-   TO_STANDARD_OUTPUT   =  true
+   TO_STANDARD_OUTPUT   =  false
    PERFORMANCE_TRACKING =  true
    MAX_LOG_FILE_SIZE    =  2097152 ## 2MB - Comment starts with two hashes (##)
    LOG_FLUSH_THRESHOLD  =  300 ## Flush after every 100 logs
@@ -12,4 +12,4 @@
 * WARNING:
   
 * INFO:
-  
+   TO_STANDARD_OUTPUT   =  true
