Get keepalive working for OSX but not terminating on timeout

--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,5 @@ Testing/NodeSimulator/__pycache__/
 OnPod/FlightComputer/tests/myeasylog\.log
 
 OnPod/FlightComputer/BeagleBone/
+
+OnPod/FlightComputer/Host/src/
