--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,5 @@ OnPod/FlightComputer/tests/myeasylog\.log
 OnPod/FlightComputer/BeagleBone/
 
 OnPod/FlightComputer/Host/src/
+
+OnPod/FlightComputer/myeasylog\.log
