Table Updating with Values

--- a/OnLand/requirements.txt
+++ b/OnLand/requirements.txt
@@ -1,19 +1,31 @@
-socketio
-google
+cachetools==3.1.0
 certifi==2019.3.9
 chardet==3.0.4
 Click==7.0
 Flask==1.0.2
+Flask-SocketIO==3.3.2
 Flask-WTF==0.14.2
+google-api-python-client==1.7.8
+google-auth==1.6.3
+google-auth-httplib2==0.0.3
+httplib2==0.12.1
 idna==2.8
 influxdb==5.2.2
 itsdangerous==1.1.0
 Jinja2==2.10.1
 MarkupSafe==1.1.1
+protobuf==3.7.1
+pyasn1==0.4.5
+pyasn1-modules==0.2.4
 python-dateutil==2.8.0
+python-engineio==3.5.1
+python-socketio==3.1.2
 pytz==2019.1
+q==2.6
 requests==2.21.0
+rsa==4.0
 six==1.12.0
+uritemplate==3.0.0
 urllib3==1.24.2
 Werkzeug==0.15.2
 WTForms==2.2.1
