Move to CMake Project -  Stuck at vtable error

--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,5 @@ OnPod/FlightComputer/BeagleBone/
 OnPod/FlightComputer/Host/src/
 
 OnPod/FlightComputer/myeasylog\.log
+
+OnPod/FlightComputer/build/host/
