pod_sim + logging + PDS restructure (#36)
* committing shitty code because I need to pack my desktop for Toronto

* merge /ControlLaptop/ with master

* wowe love venv's

* minor tweak

* base

* manual merge ControlLaptop/ with master

* 1 process, 1 pod

* logging

* Small changes

* Add exception handling for socketio connection

--- a/.gitignore
+++ b/.gitignore
@@ -52,5 +52,7 @@ OnPod/FlightComputer/BeagleBone/
 OnPod/FlightComputer/Host/src/
 
 OnPod/FlightComputer/myeasylog\.log
+OnLand/pyvenv.cfg
+*.log
 
 OnPod/FlightComputer/build/
