--- a/.gitignore
+++ b/.gitignore
@@ -53,5 +53,6 @@ OnPod/FlightComputer/build/
 OnPod/Node/DynamicTestStand/include
 OnPod/Node/RearNode/include
 Testing/SingleCellTesting/Node/include
+OnPod/Node/HighPressureTesting/include
 
 ProtoBufs/UpdateNanoPbProtos.sh
