Brake node initial commit

--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,5 @@ ProtoBufs/Paradigm/cpp/
 
 
 OnLand/ControlLaptop/Paradigm_pb2\.py
+OnPod/Node/BrakeNode/include
+OnPod/Node/EnclosureArduino/include
