--- a/OnPod/FlightComputer/libs/EasyLogger/logging.conf
+++ b/OnPod/FlightComputer/libs/EasyLogger/logging.conf
@@ -1,6 +1,6 @@
 * GLOBAL:
    FORMAT               =  "%level : %thread_name ... %msg"
-   FILENAME             =  "/tmp/logs/FlightComputer.log"
+   FILENAME             =  "FlightComputer.log"
    ENABLED              =  true
    TO_FILE              =  true
    TO_STANDARD_OUTPUT   =  false
