--- a/OnLand/ControlLaptop/LocalStorage/ConfigStorage.json
+++ b/OnLand/ControlLaptop/LocalStorage/ConfigStorage.json
@@ -1,1 +1,1 @@
-{"pod_driver": "Simulation", "telemetry_port": 7000, "retrieval_timeout": 60000, "heartbeat_timeout": 5000, "command_port": 6000, "pod_address": "192.168.5.4"}
+{"retrieval_timeout": 60000, "heartbeat_timeout": 5000, "pod_address": "127.0.0.1", "pod_driver": "Simulation", "telemetry_port": 7000, "command_port": 6000}
