Add working example for linux serial

--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,7 @@ OnLand/ControlLaptop/Paradigm_pb2\.py
 OnPod/Node/BrakeNode/include
 OnPod/Node/EnclosureNode/include
 OnPod/Node/NodeTest
+
+Examples/BBSerial/build/host/
+
+Examples/BBSerial/build/target/
