--- a/.gitignore
+++ b/.gitignore
@@ -85,3 +85,5 @@ OnPod/FlightComputer/src/Paradigm\.pb\.cc
 Testing/ManualCommandTesting/Paradigm_pb2\.py
 
 Testing/NodeSimulator/Paradigm_pb2\.py
+
+OnPod/FlightComputer/cmake-build-relwithdebinfo/
