--- a/OnPod/FlightComputer/libs/EasyLogger/logging.conf
+++ b/OnPod/FlightComputer/libs/EasyLogger/logging.conf
@@ -1,11 +1,10 @@
 * GLOBAL:
-   FORMAT               =  "%level : %thread_name ... %msg"
+   FORMAT               =  "%datetime , %level , %thread_name, %msg, "
    FILENAME             =  "FlightComputer.log"
    ENABLED              =  true
    TO_FILE              =  true
    TO_STANDARD_OUTPUT   =  false
    PERFORMANCE_TRACKING =  true
-   MAX_LOG_FILE_SIZE    =  2097152 ## 2MB - Comment starts with two hashes (##)
    LOG_FLUSH_THRESHOLD  =  300 ## Flush after every 100 logs
 * DEBUG:
   
