--- a/.gitignore
+++ b/.gitignore
@@ -87,3 +87,5 @@ Testing/ManualCommandTesting/Paradigm_pb2\.py
 Testing/NodeSimulator/Paradigm_pb2\.py
 
 OnPod/FlightComputer/cmake-build-relwithdebinfo/
+OnPod/FlightComputer/cmake-build-debug/
+
