--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@
 .DS_Store
 *.settings*
 .idea
+.vscode/
 venv/
 pycache/
 *.out
@@ -89,3 +90,4 @@ Testing/ManualCommandTesting/Paradigm_pb2\.py
 Testing/NodeSimulator/Paradigm_pb2\.py
 
 OnPod/FlightComputer/cmake-build-relwithdebinfo/
+OnPod/FlightComputer/cmake-build-debug/
