--- a/OnLand/ControlLaptop/LocalStorage/ConfigStorage.json
+++ b/OnLand/ControlLaptop/LocalStorage/ConfigStorage.json
@@ -1,1 +1,1 @@
-{"command_port": 6000, "pod_driver": "Simulation", "controlLaptopIpAddr": "192.168.0.6", "retrieval_timeout": 60000, "heartbeat_timeout": 5000, "pod_address": "127.0.0.1", "telemetry_port": 7000}
+{"retrieval_timeout": 60000, "controlLaptopIpAddr": "192.168.0.2", "telemetry_port": 7000, "heartbeat_timeout": 5000, "pod_driver": "Simulation", "pod_address": "127.0.0.1", "command_port": 6000}
